add first route.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,16 +4,16 @@
   </header>
 
   <main>
-    <section class="add-task-section">
+    <!-- <section class="add-task-section">
       <app-add-task></app-add-task>
-    </section>
+    </section> -->
 
     <section class="user-section">
       <app-users></app-users>
     </section>
 
-    <section class="task-section">
+    <!-- <section class="task-section">
       <app-task-list></app-task-list>
-    </section>
+    </section> -->
   </main>
 </div>
