render first router.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,8 +12,9 @@
       <app-users></app-users>
     </section>
 
-    <!-- <section class="task-section">
-      <app-task-list></app-task-list>
-    </section> -->
+     <section class="task-section">
+      <router-outlet></router-outlet>
+      <!-- <app-task-list></app-task-list> -->
+    </section> 
   </main>
 </div>
