add router link.

--- a/src/app/users/user-card/user-card.component.html
+++ b/src/app/users/user-card/user-card.component.html
@@ -1,4 +1,4 @@
-<div class="user-card">
+<a routerLink="/tasks" class="user-card">
   <div class="user-avatar">
     {{ user.name.charAt(0) }}
   </div>
@@ -12,4 +12,4 @@
       </span>
     </div>
   </div>
-</div> 
+</a> 
