--- a/src/app/users/user-card/user-card.component.html
+++ b/src/app/users/user-card/user-card.component.html
@@ -1,4 +1,4 @@
-<a routerLink="/tasks" class="user-card">
+<a routerLink="/tasks" class="user-card" routerLinkActive="selected">
   <div class="user-avatar">
     {{ user.name.charAt(0) }}
   </div>
